# Moon-assistant

./: .env  .env.example  .gitignore  Dockerfile  PHASE2_PHASE3.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase2_phase3.py
bot/: __main__.py  bot.py  config.py
bot/ai/: base.py  constitution_service.py  gemini_provider.py  intent_service.py  manager.py  model_routing.py  openrouter_provider.py  orchestrator.py  rules_service.py
bot/cogs/: admin_cog.py  ai_cog.py  ai_rules_cog.py  archive_cog.py  assistant_cog.py  background_tasks_cog.py  control_panel_cog.py  conversation_cog.py  error_handler_cog.py  founder_admin_cog.py  model_routing_cog.py  moderation_cog.py  moderation_intel_cog.py  music_cog.py  search_cog.py
bot/database/: __init__.py  base.py  models.py  models_ai.py  models_knowledge_ext.py  models_moderation_intel.py  session.py
bot/investigation/: __init__.py  base.py  registry.py  tools.py
bot/knowledge/: constants.py  indexer.py  learning_service.py  retriever.py
bot/moderation/: action_guard.py  heuristics.py  intelligence_service.py  service.py
bot/repositories/: __init__.py  ai_repository.py  ai_state_repository.py  (+2 more)
tests/: conftest.py  test_action_guard.py  test_heuristics.py  test_intent_service.py  test_investigation_tools.py  test_model_routing.py  test_moderation_intel.py  test_orchestrator.py  test_permission_service.py  test_repositories.py  test_rules_unification.py  test_services.py  test_support_engine.py
(+15 files in other folders)
